# frappe_bench_manager_m

./: .gitignore  BENCH_NODE_MANAGER_MIGRATION.md  DEV_CONFIG_README.md  README.md  REALTIME_SYNC_README.md  package.json  pyproject.toml  requirements.txt
app_store/: components.d.ts  index.html  package.json  postcss.config.js  tailwind.config.js  vite.config.js
app_store/src/: App.vue  index.css  main.js  router.js
app_store/src/components/: Loader.vue  SearchBar.vue
app_store/src/composables/: useSchema.js
app_store/src/data/: session.js  user.js
app_store/src/layouts/: AdminLayout.vue  DeveloperLayout.vue  PublicFooter.vue  PublicHeader.vue  PublicLayout.vue
app_store/src/pages/: Community.vue  Dashboard.vue  Login.vue  Signup.vue
app_store/src/pages/admin/: Dashboard.vue  ModerationQueue.vue  (+2 more)
bench_manager/: agent.py  api.py  hooks.py
bench_manager/bench_manager/: debug_vm_save.py  realtime_sync.py  utils.py
bench_manager/bench_manager/agent/: agent_communication.py
bench_manager/bench_manager/api/: app_store_payment.py
bench_manager/bench_manager/commands/: fix_vm.py
bench_manager/bench_manager/helpers/: github_api.py
bench_manager/bench_manager/utils/: github_api.py  version_utils.py
bench_manager/migrate/: v0_0_1_migrate_bench_node_manager.py
bench_manager/playbooks/: deploy_agent.yml  prepare_server.yml
bench_manager/public/: node_modules
bench_manager/public/frontend/: index.html
bench_manager/public/js/: bench_manager.js
bench_manager/templates/pages/: sitemap.html
bench_manager/www/: home.html  llms.txt  robots.txt
(+290 files in other folders)
